--- a/UI/Views/Login/Index.cshtml
+++ b/UI/Views/Login/Index.cshtml
@@ -36,31 +36,42 @@
 <body class="text-center">
 
     <main class="form-signin">
-        <form>
-            <img class="mb-4" src="~/Content/img/Logo.png" alt="" width="191" height="156">
-            <h1 class="h3 mb-3 fw-normal">Inicie sesión</h1>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-            <div class="form-floating">
+             <form>
+                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-                @Html.EditorFor(model => model.Mail, new { htmlAttributes = new { @class = "form-control" } })
+                 <img class="mb-4" src="~/Content/img/Logo.png" alt="" width="191" height="156">
+                    <h1 class="h3 mb-3 fw-normal">Inicie sesión</h1>
 
-            </div>
-            <div class="form-floating">
+                 <div class="form-floating">
 
-                @Html.EditorFor(model => model.Contraseña, new { htmlAttributes = new { @class = "form-control" } })
+                     @Html.EditorFor(model => model.Mail, new { htmlAttributes = new { @class = "form-control" } })
 
-            </div>
+                    </div>
+                    <div class="form-floating">
 
-            <div class="checkbox mb-3">
-                <label>
-                    <input type="checkbox" value="remember-me"> Recordarme
-                </label>
-            </div>
+                      @Html.EditorFor(model => model.Contraseña, new { htmlAttributes = new { @class = "form-control" } })
+    
+                     </div>
+
+                 <div class="checkbox mb-3">
+                    <label>
+                         <input type="checkbox" value="remember-me"> Recordarme
+                    </label>
+                </div>
+
+
             <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
             <p class="mt-5 mb-3 text-muted">&copy; A2Cloud - 2021</p>
-        </form>
-    </main>
 
+            
+        </form>
+        }
+        </main>
+    
 
 
 </body>
