--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -37,7 +37,8 @@
 
         <div class="btn-group">
             <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                Diego Lambrechts
+                @if (Session["NombreCompleto"] != null)
+                {@Session["NombreCompleto"].ToString()}
             </button>
             <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item" href="#">Cambiar Idioma</a></li>
