--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -125,7 +125,10 @@
                             <div class="collapse" id="account-collapse">
                                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                                     <li>@Html.ActionLink("Usuarios", "Index", "Usuario", null, new { @class = "link-dark rounded", @id = "Usuarios" })</li>
-                                    <li><a href="~/Usuario" class="link-dark rounded">Perfiles</a></li>
+                                    <li><a href="~/Usuario" class="link-dark rounded">Permisos de Usuario</a></li>
+
+                                    <li>@Html.ActionLink("Grupo de Permisos", "GrupoPermisos", "Permisos", null, new { @class = "link-dark rounded", @id = "Grupos" })</li>
+                        
                                 </ul>
                             </div>
                         </li>
