--- a/UI/Views/Usuario/Index.cshtml
+++ b/UI/Views/Usuario/Index.cshtml
@@ -41,7 +41,7 @@
 </div>
     }
 
-    <table class="table">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th scope="col">@Html.DisplayNameFor(model => model.Id)</th>
