Avances en Gestión de Grupos

--- a/UI/Views/Permisos/CrearGrupo.cshtml
+++ b/UI/Views/Permisos/CrearGrupo.cshtml
@@ -49,3 +49,10 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+<script>
+
+    window.onload = function () {
+        document.getElementById('account-collapse').className = 'show';
+        document.getElementById('Grupos').className = 'btn-activo';
+    };
+</script>
