--- a/UI/Views/Permisos/GrupoPermisos.cshtml
+++ b/UI/Views/Permisos/GrupoPermisos.cshtml
@@ -38,7 +38,7 @@
                     <td>@Html.DisplayFor(model => item.Descripcion)</td>
 
                     <td>
-                        <a href="@Url.Action("Edit", "Usuario", new {id=item.Id })"><i class="fa fa-edit"></i></a>&ensp;&ensp;
+                        <a href="@Url.Action("EditarGrupo", "Permisos", new {id=item.Id })"><i class="fa fa-edit"></i></a>&ensp;&ensp;
                         <a href="@Url.Action("Delete", "Usuario", new {id=item.Id })"><i class="fa fa-trash"></i></a>&ensp;&ensp;
                         <a href="@Url.Action("Details", "Usuario", new { id = item.Id })"><i class="fa fa-eye"></i></a>&ensp; &ensp;
                     </td>
